# well-I-known

./: .gitignore  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs  wik_commands.rs  wik_commands_handlers.rs
client/: Cargo.toml
client/src/: lib.rs
core/: Cargo.toml
core/resources/test/: test-private-key.pem
core/src/: cryptography.rs  id_validation.rs  lib.rs  password.rs
core/src/api/: access_right.rs  admin.rs  data.rs  mod.rs  operation.rs  user.rs
core/src/crypto/: cryptography.rs  mod.rs  password.rs
core/src/modal/: config_data.rs  mod.rs  user.rs
core/src/modal/util/: mod.rs
note/: Design.md  Security.md  draft.txt  rust.md
server/: Cargo.toml
server/resources/test/: base-test.db  wik-server-config.json
server/src/: error.rs  lib.rs  main.rs  server_controller.rs  server_init.rs  server_state.rs
server/src/auth/: jwt_claim.rs  jwt_controller.rs  jwt_key.rs  mod.rs  role_validation.rs
server/src/config/: server_config.rs
server/src/controller/: admin.rs  config_data.rs  data.rs  mod.rs  user.rs
server/src/dao/: access_right.rs  config_data.rs  user.rs
server/src/db/: access_right.rs  config_data.rs  db_base.rs  db_connection.rs  db_executor.rs  db_test_util.rs  mod.rs  user.rs
server/src/error/: api_error.rs  auth_error.rs  mod.rs
server/src/repository/: access_right.rs  config_data.rs  data.rs  mod.rs  user.rs
server/tests/: server_init.rs
