[package]
name = "well-i-known-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rsa = "0.9.6"
rand = "0.8.5"
base64 = "0.21.5"
anyhow = "1.0"
bcrypt = "0.15.0"
serde = "1.0.197"

[dev-dependencies]
indoc = "2"
mt-test-util = { path = "/Users/maisytse/Documents/Workspace/rust/rust-util/mt-test-util" }

# faster RSA key gen
[profile.dev.package.num-bigint-dig]
opt-level = 3
