[package]
name = "well-i-known-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rsa = { version = "0.9.6", features = ["pem"]}
rand = "0.8.5"
base64 = "0.21.5"
anyhow = "1.0"
bcrypt = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26"

[dev-dependencies]
indoc = "2"

# faster RSA key gen
[profile.dev.package.num-bigint-dig]
opt-level = 3
