[package]
name = "well-i-known-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
chrono = "0.4.33"
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing = "0.1.40"
figment = { version = "0.10.14", features = ["json"] }
